@@ -1,5 +1,5 @@
 AUX eselect-python-20080925-prefix.patch 465 RMD160 26bdc4176dd476cf7cb611a3ae204980b1cc57a9 SHA1 6913cd143b4f443e51a3aef7c63c8172ea113611 SHA256 a38e0460c2728e9e20c8326b04901b87b4dfccaec246ec521f4778256845b14c
 DIST python.eselect-20080925.bz2 1867 RMD160 741e8850a98ccab9b2a0b3930663644ef4273535 SHA1 19924e6f62344116b9b63ad3e8e67f54767ef491 SHA256 e3a76a5918acf2def07ca261cc5a2791ab984afa039dd48584f70225786de0ed
 EBUILD eselect-python-20080925.ebuild 781 RMD160 5265edad568cb22ab3d89daa7a9e61971c0229cd SHA1 8e14aa23711700ce538cecea6005b53b86c28044 SHA256 1a879c29787ae013c36d42d8a0fe97e30e93fdbe8fdf20b082a4274558c593b0
-MISC ChangeLog 2155 RMD160 9d3987d83d595871b1dedfe120ebd5a29019b117 SHA1 a7454fadfae8e2d2d6b051af1bb68718b4b5a22c SHA256 3de72c2ffaff1dadb16d23c7f0c5b277ec1e6fce4d7ed5552eadfd1e9798e95d
-MISC metadata.xml 253 RMD160 00841398c5efe524f2cd75ed21df06be44210378 SHA1 cbb94048a7732a88bed9edef47bee9946510764e SHA256 53e3bc239aa0ca34acc35bc477664b478181a81e3fbe1e432675e838002fd124
+MISC ChangeLog 2300 RMD160 b991b94afaf576aa7eb88fe86c2506cb72155e7a SHA1 0090ee731d9e719bda07cf5272325f721cad16ce SHA256 9eacd38073d03c80b0884b9f3253bf5fc1637399ff0c00f5f2c6d298045ecfc7
+MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
