@@ -2,9 +2,4 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>python</herd>
-	<maintainer>
-		<email>hawking@gentoo.org</email>
-		<name>Ali Polatel</name>
-	</maintainer>
 </pkgmetadata>
-
